bindings/ruby/ext/blazen/blazen.h


typedef struct BlazenError BlazenError;
typedef struct BlazenFuture BlazenFuture;
typedef struct BlazenJsonlDataset BlazenJsonlDataset;
typedef struct BlazenModelManager BlazenModelManager;
typedef struct BlazenPreferenceJsonlDataset BlazenPreferenceJsonlDataset;
typedef struct BlazenRatedJsonlDataset BlazenRatedJsonlDataset;
typedef struct {
    char *adapter_dir;
    float final_loss;
    uint64_t total_steps;
} BlazenTrainedAdapter;
typedef struct {
    char *output_dir;
    float final_loss;
    uint64_t steps_completed;
} BlazenFullFineTuneResult;
typedef struct {
    uint32_t rank;
    float alpha;
    float dropout;
    const char *const *target_modules;
    uintptr_t target_modules_len;
} BlazenLoraConfig;
typedef struct {
    double learning_rate;
    double beta1;
    double beta2;
    double epsilon;
    double weight_decay;
    int32_t has_gradient_clip;
    float gradient_clip;
} BlazenOptimConfig;
typedef struct {
    int32_t kind;
    uint32_t warmup_steps;
} BlazenSchedulerConfig;
typedef struct {
    const char *base_model_repo;
    const char *output_dir;
    BlazenLoraConfig lora;
    BlazenOptimConfig optim;
    BlazenSchedulerConfig scheduler;
    uint32_t max_steps;
    uint32_t batch_size;
    uint32_t gradient_accumulation_steps;
    uint32_t max_seq_len;
    int32_t has_eval_steps;
    uint32_t eval_steps;
    int32_t has_save_steps;
    uint32_t save_steps;
    uint64_t seed;
    int32_t mixed_precision;
    const char *device;
} BlazenTrainConfig;
typedef struct {
    const char *base_model_repo;
    const char *base_model_revision;
    const char *output_dir;
    BlazenOptimConfig optim;
    BlazenSchedulerConfig scheduler;
    uint32_t max_steps;
    uint32_t batch_size;
    uint32_t gradient_accumulation_steps;
    uint32_t max_seq_len;
    int32_t has_eval_steps;
    uint32_t eval_steps;
    int32_t has_save_steps;
    uint32_t save_steps;
    uint64_t seed;
    int32_t mixed_precision;
    const char *device;
} BlazenTrainCoreConfig;
typedef struct {
    BlazenTrainCoreConfig core;
    BlazenLoraConfig lora;
    float beta;
    float label_smoothing;
    const char *reference_model_repo;
    const char *reference_model_revision;
} BlazenDpoConfig;
typedef struct {
    BlazenTrainCoreConfig core;
    BlazenLoraConfig lora;
    float lambda;
} BlazenOrpoConfig;
typedef struct {
    BlazenTrainCoreConfig core;
    BlazenLoraConfig lora;
    float beta;
    float gamma;
} BlazenSimpoConfig;
typedef struct {
    BlazenTrainCoreConfig core;
    BlazenLoraConfig lora;
    float beta;
    float lambda_d;
    float lambda_u;
    const char *reference_model_repo;
    const char *reference_model_revision;
} BlazenKtoConfig;
typedef struct {
    BlazenTrainCoreConfig core;
    int32_t gradient_checkpointing;
} BlazenFullFineTuneConfig;
typedef struct {
    uint64_t rank;
    uint64_t world_size;
    char *peers;
    char *master_addr;
    uint16_t master_port;
} BlazenDistributedConfig;
int32_t blazen_future_take_full_finetune_result(BlazenFuture *fut,
                                                BlazenFullFineTuneResult *out_result,
                                                BlazenError **err);
int32_t blazen_model_manager_train_lora_blocking(const BlazenModelManager *mgr,
                                                 const BlazenTrainConfig *config,
                                                 BlazenJsonlDataset *dataset,
                                                 BlazenTrainedAdapter *out_adapter,
                                                 BlazenError **out_err);
BlazenFuture *blazen_model_manager_train_lora(const BlazenModelManager *mgr,
                                              const BlazenTrainConfig *config,
                                              BlazenJsonlDataset *dataset);
int32_t blazen_model_manager_train_dpo_blocking(const BlazenModelManager *mgr,
                                                const BlazenDpoConfig *config,
                                                BlazenPreferenceJsonlDataset *dataset,
                                                BlazenTrainedAdapter *out_adapter,
                                                BlazenError **out_err);
BlazenFuture *blazen_model_manager_train_dpo(const BlazenModelManager *mgr,
                                             const BlazenDpoConfig *config,
                                             BlazenPreferenceJsonlDataset *dataset);
int32_t blazen_model_manager_train_orpo_blocking(const BlazenModelManager *mgr,
                                                 const BlazenOrpoConfig *config,
                                                 BlazenPreferenceJsonlDataset *dataset,
                                                 BlazenTrainedAdapter *out_adapter,
                                                 BlazenError **out_err);
BlazenFuture *blazen_model_manager_train_orpo(const BlazenModelManager *mgr,
                                              const BlazenOrpoConfig *config,
                                              BlazenPreferenceJsonlDataset *dataset);
int32_t blazen_model_manager_train_simpo_blocking(const BlazenModelManager *mgr,
                                                  const BlazenSimpoConfig *config,
                                                  BlazenPreferenceJsonlDataset *dataset,
                                                  BlazenTrainedAdapter *out_adapter,
                                                  BlazenError **out_err);
BlazenFuture *blazen_model_manager_train_simpo(const BlazenModelManager *mgr,
                                               const BlazenSimpoConfig *config,
                                               BlazenPreferenceJsonlDataset *dataset);
int32_t blazen_model_manager_train_kto_blocking(const BlazenModelManager *mgr,
                                                const BlazenKtoConfig *config,
                                                BlazenRatedJsonlDataset *dataset,
                                                BlazenTrainedAdapter *out_adapter,
                                                BlazenError **out_err);
BlazenFuture *blazen_model_manager_train_kto(const BlazenModelManager *mgr,
                                             const BlazenKtoConfig *config,
                                             BlazenRatedJsonlDataset *dataset);
int32_t blazen_model_manager_fine_tune_blocking(const BlazenModelManager *mgr,
                                                const BlazenFullFineTuneConfig *config,
                                                BlazenJsonlDataset *dataset,
                                                BlazenFullFineTuneResult *out_result,
                                                BlazenError **out_err);
BlazenFuture *blazen_model_manager_fine_tune(const BlazenModelManager *mgr,
                                             const BlazenFullFineTuneConfig *config,
                                             BlazenJsonlDataset *dataset);
BlazenDistributedConfig *blazen_distributed_config_new(uint64_t rank,
                                                       uint64_t world_size,
                                                       const char *peers,
                                                       const char *master_addr,
                                                       uint16_t master_port);
 void blazen_distributed_config_free(BlazenDistributedConfig *cfg);
 void blazen_trained_adapter_free(BlazenTrainedAdapter *adapter);
BlazenJsonlDataset *blazen_jsonl_dataset_from_path(const char *path,
                                                   const char *tokenizer_path,
                                                   const char *chat_template,
                                                   uint32_t max_seq_len,
                                                   const char *device,
                                                   uint32_t pad_token_id,
                                                   BlazenError **out_err);
 void blazen_jsonl_dataset_free(BlazenJsonlDataset *dataset);
 void blazen_full_finetune_result_free(BlazenFullFineTuneResult *result);
BlazenPreferenceJsonlDataset *blazen_preference_jsonl_dataset_from_path(const char *path,
                                                                        const char *tokenizer_path,
                                                                        const char *chat_template,
                                                                        uint32_t max_seq_len,
                                                                        const char *device,
                                                                        uint32_t pad_token_id,
                                                                        BlazenError **out_err);
 void blazen_preference_jsonl_dataset_free(BlazenPreferenceJsonlDataset *dataset);
BlazenRatedJsonlDataset *blazen_rated_jsonl_dataset_from_path(const char *path,
                                                              const char *tokenizer_path,
                                                              const char *chat_template,
                                                              uint32_t max_seq_len,
                                                              const char *device,
                                                              uint32_t pad_token_id,
                                                              BlazenError **out_err);
 void blazen_rated_jsonl_dataset_free(BlazenRatedJsonlDataset *dataset);