bindings/ruby/lib/blazen/ffi.rb


    # Mirror of `BlazenOptimConfig` in blazen.h.
    class BlazenOptimConfig < ::FFI::Struct
      layout :learning_rate,     :double,
             :beta1,             :double,
             :beta2,             :double,
             :epsilon,           :double,
             :weight_decay,      :double,
             :has_gradient_clip, :int32,
             :gradient_clip,     :float
    end

    # Mirror of `BlazenSchedulerConfig` in blazen.h.
    class BlazenSchedulerConfig < ::FFI::Struct
      layout :kind,         :int32,
             :warmup_steps, :uint32
    end

    # Mirror of `BlazenTrainConfig` in blazen.h.
    class BlazenTrainConfig < ::FFI::Struct
      layout :base_model_repo,             :pointer,
             :output_dir,                  :pointer,
             :lora,                        BlazenLoraConfig,
             :optim,                       BlazenOptimConfig,
             :scheduler,                   BlazenSchedulerConfig,
             :max_steps,                   :uint32,
             :batch_size,                  :uint32,
             :gradient_accumulation_steps, :uint32,
             :max_seq_len,                 :uint32,
             :has_eval_steps,              :int32,
             :eval_steps,                  :uint32,
             :has_save_steps,              :int32,
             :save_steps,                  :uint32,
             :seed,                        :uint64,
             :mixed_precision,             :int32,
             :device,                      :pointer
    end

    # Mirror of `BlazenTrainedAdapter` in blazen.h. Inner `adapter_dir` is a
    # caller-owned heap C string freed by `blazen_trained_adapter_free`.
    class BlazenTrainedAdapter < ::FFI::Struct
      layout :adapter_dir, :pointer,
             :final_loss, :float,
             :total_steps, :uint64
    end

    attach_function :blazen_jsonl_dataset_from_path,
                    [:pointer, :pointer, :pointer, :uint32, :pointer, :uint32, :pointer],
                    :pointer
    attach_function :blazen_jsonl_dataset_free, [:pointer], :void

    attach_function :blazen_model_manager_train_lora_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :pointer],
                    :int32, blocking: true
    attach_function :blazen_model_manager_train_lora,
                    [:pointer, :pointer, :pointer], :pointer

    attach_function :blazen_trained_adapter_free, [:pointer], :void

    # -------------------------------------------------------------------
    # PR8 — preference / KTO / full-fine-tune configs and entry points
    # -------------------------------------------------------------------

    # Mirror of `BlazenTrainCoreConfig` in blazen.h. Shared across
    # `BlazenDpoConfig`, `BlazenOrpoConfig`, `BlazenSimpoConfig`,
    # `BlazenKtoConfig`, and `BlazenFullFineTuneConfig` as their `core` slot.
    class BlazenTrainCoreConfig < ::FFI::Struct
      layout :base_model_repo,             :pointer,
             :base_model_revision,         :pointer,
             :output_dir,                  :pointer,
             :optim,                       BlazenOptimConfig,
             :scheduler,                   BlazenSchedulerConfig,
             :max_steps,                   :uint32,
             :batch_size,                  :uint32,
             :gradient_accumulation_steps, :uint32,
             :max_seq_len,                 :uint32,
             :has_eval_steps,              :int32,
             :eval_steps,                  :uint32,
             :has_save_steps,              :int32,
             :save_steps,                  :uint32,
             :seed,                        :uint64,
             :mixed_precision,             :int32,
             :device,                      :pointer
    end

    # Mirror of `BlazenDpoConfig` in blazen.h.
    class BlazenDpoConfig < ::FFI::Struct
      layout :core,                       BlazenTrainCoreConfig,
             :lora,                       BlazenLoraConfig,
             :beta,                       :float,
             :label_smoothing,            :float,
             :reference_model_repo,       :pointer,
             :reference_model_revision,   :pointer
    end

    # Mirror of `BlazenOrpoConfig` in blazen.h. Reference-free.
    class BlazenOrpoConfig < ::FFI::Struct
      layout :core,   BlazenTrainCoreConfig,
             :lora,   BlazenLoraConfig,
             :lambda, :float
    end

    # Mirror of `BlazenSimpoConfig` in blazen.h. Reference-free.
    class BlazenSimpoConfig < ::FFI::Struct
      layout :core,  BlazenTrainCoreConfig,
             :lora,  BlazenLoraConfig,
             :beta,  :float,
             :gamma, :float
    end

    # Mirror of `BlazenKtoConfig` in blazen.h.
    class BlazenKtoConfig < ::FFI::Struct
      layout :core,                       BlazenTrainCoreConfig,
             :lora,                       BlazenLoraConfig,
             :beta,                       :float,
             :lambda_d,                   :float,
             :lambda_u,                   :float,
             :reference_model_repo,       :pointer,
             :reference_model_revision,   :pointer
    end

    # Mirror of `BlazenFullFineTuneConfig` in blazen.h.
    class BlazenFullFineTuneConfig < ::FFI::Struct
      layout :core,                   BlazenTrainCoreConfig,
             :gradient_checkpointing, :int32
    end

    # Mirror of `BlazenFullFineTuneResult` in blazen.h. Inner `output_dir`
    # is a caller-owned heap C string freed by
    # `blazen_full_finetune_result_free`.
    class BlazenFullFineTuneResult < ::FFI::Struct
      layout :output_dir,      :pointer,
             :final_loss,      :float,
             :steps_completed, :uint64
    end

    attach_function :blazen_preference_jsonl_dataset_from_path,
                    [:pointer, :pointer, :pointer, :uint32, :pointer, :uint32, :pointer],
                    :pointer
    attach_function :blazen_preference_jsonl_dataset_free, [:pointer], :void

    attach_function :blazen_rated_jsonl_dataset_from_path,
                    [:pointer, :pointer, :pointer, :uint32, :pointer, :uint32, :pointer],
                    :pointer
    attach_function :blazen_rated_jsonl_dataset_free, [:pointer], :void

    attach_function :blazen_model_manager_train_dpo_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :pointer],
                    :int32, blocking: true
    attach_function :blazen_model_manager_train_dpo,
                    [:pointer, :pointer, :pointer], :pointer

    attach_function :blazen_model_manager_train_orpo_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :pointer],
                    :int32, blocking: true
    attach_function :blazen_model_manager_train_orpo,
                    [:pointer, :pointer, :pointer], :pointer

    attach_function :blazen_model_manager_train_simpo_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :pointer],
                    :int32, blocking: true
    attach_function :blazen_model_manager_train_simpo,
                    [:pointer, :pointer, :pointer], :pointer

    attach_function :blazen_model_manager_train_kto_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :pointer],
                    :int32, blocking: true
    attach_function :blazen_model_manager_train_kto,
                    [:pointer, :pointer, :pointer], :pointer

    attach_function :blazen_model_manager_fine_tune_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :pointer],
                    :int32, blocking: true
    attach_function :blazen_model_manager_fine_tune,
                    [:pointer, :pointer, :pointer], :pointer

    attach_function :blazen_future_take_full_finetune_result,
                    [:pointer, :pointer, :pointer], :int32
    attach_function :blazen_full_finetune_result_free, [:pointer], :void

    # DistributedConfig — ring-AllReduce config for multi-GPU /
    # multi-node training. Constructed via
    # {blazen_distributed_config_new}, freed via
    # {blazen_distributed_config_free}. Passed to training verbs that
    # accept distributed configuration.
    attach_function :blazen_distributed_config_new,
                    %i[uint64 uint64 pointer pointer uint16],
                    :pointer
    attach_function :blazen_distributed_config_free, [:pointer], :void

    # -------------------------------------------------------------------
    # 3D pipeline (Compat3dProvider — HTTP proxy backend)
    #
    # Built only when libblazen_cabi was compiled with the
    # +threed-compat-proxy+ feature. The Ruby wrapper in
    # +lib/blazen/threed.rb+ probes these symbols and falls back to a
    # +UnsupportedError+ raiser when they're not present.
    # -------------------------------------------------------------------

    # PBR-channel discriminants (mirror BLAZEN_PBR_MAP_* in blazen.h)
    PBR_MAP_ALBEDO    = 0
    PBR_MAP_NORMAL    = 1
    PBR_MAP_ROUGHNESS = 2
    PBR_MAP_METALLIC  = 3
